<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sub_big_spacing"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/connection_type_title"
                android:textSize="@dimen/sub_medium_big_text" />

            <TextView
                android:id="@+id/main_connection_type_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:onClick="@{onClickListener}"
                android:text="@string/connection_type_1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_server_port_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sub_big_spacing"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/server_port_title"
                android:textSize="@dimen/sub_medium_big_text" />

            <EditText
                android:id="@+id/main_server_port_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/server_port_hint"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_serial_path_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sub_big_spacing"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/serial_path_title"
                android:textSize="@dimen/sub_medium_big_text" />

            <TextView
                android:id="@+id/main_serial_path_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:onClick="@{onClickListener}"
                android:text="@string/serial_path_hint" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_serial_baud_rate_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sub_big_spacing"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/serial_baud_rate_title"
                android:textSize="@dimen/sub_medium_big_text" />

            <EditText
                android:id="@+id/main_serial_baud_rate_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/serial_baud_rate"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/main_sure_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sub_big_spacing"
            android:onClick="@{onClickListener}"
            android:text="@string/sure" />


    </LinearLayout>
</layout>